<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:background="@drawable/border"
    android:layout_margin="1dp"
    tools:context=".ReportActivity">

<!-- Report title -->
    <TextView
        android:id="@+id/textViewReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/report_title" />

<!--  father  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text="@string/family_member_lb"/>

    <TextView
        android:id="@+id/textViewFatherEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/systolic_reading"/>

    <TextView
        android:id="@+id/textViewFatherSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/diastolic_reading"/>

    <TextView
        android:id="@+id/textViewFatherDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/avg_lb"/>

    <TextView
        android:id="@+id/textViewAvgFather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

<!--  blank  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
<!--  blank  -->

    <!--  mother  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text="@string/family_member_lb"/>

    <TextView
        android:id="@+id/textViewMatherEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/systolic_reading"/>

    <TextView
        android:id="@+id/textViewMotherSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/diastolic_reading"/>

    <TextView
        android:id="@+id/textViewMatherDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/avg_lb"/>

    <TextView
        android:id="@+id/textViewAvgMother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>


    <!--  blank  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
    <!--  blank  -->

    <!--  Grandpa  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text="@string/family_member_lb"/>

    <TextView
        android:id="@+id/textViewGPEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/systolic_reading"/>

    <TextView
        android:id="@+id/textViewGPSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="13"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/diastolic_reading"/>

    <TextView
        android:id="@+id/textViewGPDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="13"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="14"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/avg_lb"/>

    <TextView
        android:id="@+id/textViewAvgGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="14"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <!--  blank  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="15"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="15"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="" />
    <!--  blank  -->

    <!--  Grandma  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="16"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text="@string/family_member_lb"/>

    <TextView
        android:id="@+id/textViewGMEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="16"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="17"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/systolic_reading"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewGMSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="17"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="18"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/diastolic_reading"/>

    <TextView
        android:id="@+id/textViewGMDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="18"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="19"
        android:layout_column="0"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/avg_lb"/>

    <TextView
        android:id="@+id/textViewAvgGM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="19"
        android:layout_column="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text=""/>

</GridLayout>

</ScrollView>